test_cases/pass/p05.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i
FOR (i=5, i <= 5, i=i+1)
START FOR
    PRINT: "once"
END FOR
END SCRIPT
