test_cases/fail/f48.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i
FOR (i=0, i < 5, PRINT: i)
START FOR
    i=i+1
END FOR
END SCRIPT
